# PDEFFER

./: .gitignore  alembic.ini  docker-compose.yml  docx_writer.py  ocr_debug.py  pdeffer_gui.py  pdf_to_png.py  png_ocr.py  test_metadata.py  writer_debug.py
alembic/: env.py
alembic/versions/: 3a251c1c7986_create_users_table.py  c9e51dd62e11_check_autogenerate.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  error_log.py  user.py
backend/: .dockerignore  .env  Dockerfile  docx_writer.py  main.py  pdf_to_png.py  pyproject.toml  requirements.txt
backend/app/api/: auth.py
backend/app/models/: users.py
backend/app/utils/: database.py  jwt_helpers.py
data/: app.db  users.db
debug_cells/: cell_r0_c3.txt  cell_r0_c4.txt  cell_r1_c2.txt  cell_r2_c3.txt  cell_r3_c3.txt  cell_r4_c3.txt  cell_r5_c3.txt  cell_r6_c3.txt
frontend/: index.html  scripts.js  style.css
legacy_scripts/: main.py
output_docx/: page1.docx
output_pages/: output.docx
